# Roguelike-2d-thing

./: .gitignore  CMakeLists.txt
src/: AssetManager.cpp  AssetManager.h  CameraUtils.h  Game.cpp  Game.h  Spawner.cpp  Spawner.h  TileMap.cpp  TileMap.h  UpgradeType.h  World.cpp  World.h  main.cpp
src/UI/: UI.cpp  UI.h
src/animation/: Animation.cpp  Animation.h  AnimationState.h
src/assets/maps/: TestMap.tmj  terrain.tsx  testMap.tmj
src/entities/: BatEnemy.cpp  BatEnemy.h  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h  TreeEnemy.cpp  TreeEnemy.h
src/renderer/: Renderer.cpp  Renderer.h
src/systems/: CollisionSystem.cpp  CollisionSystem.h  CombatSystem.cpp  CombatSystem.h  EnemySystem.cpp  EnemySystem.h  PlayerSystem.cpp  PlayerSystem.h  TargetingSystem.cpp  TargetingSystem.h  UpgradeSystem.cpp  UpgradeSystem.h  XPSystem.cpp  XPSystem.h
src/utils/: CameraUtils.h  MovementUtils.h
src/weapons/: ArrowWeapon.cpp  ArrowWeapon.h  BulletWeapon.cpp  BulletWeapon.h  OrbitalWeapon.cpp  OrbitalWeapon.h  Weapon.h
src/xp/: XPOrb.cpp  XPOrb.h
